--- a/desktop.ini
+++ b/desktop.ini
@@ -1,5 +1,5 @@
 [.ShellClassInfo]
-IconResource=G:\Pictures\Folder Icons\123657071_682171676061060_7984039979406664075_n.ico,0
+IconResource=C:\Users\ToddMpeli\Documents\Todd Owen Mpeli\Folder Icons\66625453_2318987228222064_320148675837136961_n.ico,0
 [ViewState]
 Mode=
 Vid=
